<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    card_view:cardElevation="6dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:id="@+id/item_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/item_product_valor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/product_valor"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/item_txtqtd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/product_qtd"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/edit_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/delete_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete" />

    </LinearLayout>

</android.support.v7.widget.CardView>