<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/enter_name_loja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_loja"
        android:textColorHint="@color/gray"
        android:textSize="12dp"
        android:inputType="text"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/enter_endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loja_endereco"
        android:textColorHint="@color/gray"
        android:layout_marginTop="24dp"
        android:textSize="12dp"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/enter_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loja_numero"
        android:inputType="number"
        android:textColorHint="@color/gray"
        android:layout_marginTop="24dp"
        android:textSize="12dp"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/enter_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loja_tel"
        android:inputType="phone"
        android:textColorHint="@color/gray"
        android:layout_marginTop="24dp"
        android:textSize="12dp"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:padding="12dp"/>

</LinearLayout>